# simple-template

./: .env.example  .gitattributes  .gitignore  README.md  compose.yaml  compose.yml
apps/backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.test  Dockerfile.test.e2e  Dockerfile.test.unit  Makefile  README.md  pyproject.toml
apps/backend/docs/: ARCHITECTURE.md  CONTRIBUTING.md
apps/backend/requirements/: common.txt  dev.txt  test.txt
apps/backend/scripts/cmd/: dev  prod
apps/backend/src/: __init__.py  __main__.py  app.py  security.py
apps/backend/src/api/: __init__.py  deps.py  params.py
apps/backend/src/api/auth/: routes.py
apps/backend/src/api/users/: models.py  repository.py  routes.py  schemas.py  service.py
apps/backend/src/db/: __init__.py  deps.py  mixins.py  models.py
apps/backend/src/db/migrations/: env.py
apps/backend/src/settings/: __init__.py  api.py  app.py  postgres.py  swagger.py
apps/backend/src/template/: app.py
apps/backend/src/template/routers/: __init__.py
apps/backend/src/template/settings/: __init__.py  app.py
apps/backend/template/: __init__.py  __main__.py  app.py
apps/backend/template/settings/: __init__.py  app.py  swagger.py
apps/backend/tests/: conftest.py
apps/backend/tests/e2e/: test_docs.py  test_e2e.py
apps/backend/tests/e2e/auth/: test_auth_login.py  test_auth_register.py
apps/backend/tests/e2e/users/: test_users.py  test_users_me.py
apps/backend/tests/unit/: test_unit.py
apps/backend/tests/utils/: operators.py
docs/: CONTRIBUTING.md  (+1 more)
(+323 files in other folders)
